--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,13 @@ dependencies:
   flutter_native_splash: ^2.3.1
   
 flutter_native_splash:
-  background_image: assets/images/k.png
-  image: assets/images/k.png
+  background_image: assets/images/cards.png
+  image: assets/images/cards.png
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/k.png"
+  image_path: "assets/images/cards.png"
   min_sdk_android: 21
 
 dev_dependencies:
