--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.3.1
   
 flutter_native_splash:
+  color: "#42a5f5"
   background_image: assets/images/cards.png
   image: assets/images/cards.png
 
